Broke, don't merge

--- a/tilt-webservice/src/main/resources/application.properties
+++ b/tilt-webservice/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=tilt-webserver
 server.servlet.context-path=/brew
 
 spring.exposed.generate-ddl=true
+
+spring.jackson.serialization.write-dates-as-timestamps=false
